Changed main header link, send excel through email with new form

--- a/app/views/generatefile.ejs
+++ b/app/views/generatefile.ejs
@@ -9,94 +9,6 @@
         <strong>Oh no!</strong> Algo salio mal, vuelve a intentarlo por favor.
     </div>
 
-    <div id="additemmodal" class="modal" style="z-index: 999999;">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <!-- MODAL HEADER -->
-                <div class="modal-header">
-                    <h5 class="modal-title">Agregue un Item</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            <div class="modal-body">
-                <form id="additemform">
-                    <fieldset>
-                        <div class="form-group">
-                            <!-- <label for="numnerid">NRO ID</label> -->
-                            <input type="text" class="form-control datafield" id="numnerid" aria-describedby="id-number" placeholder="NRO ID">
-                            <!-- <small id="emailHelp" class="form-text text-muted">El numero de identificación de tu producto.</small> -->
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="nameandsurname">Nombre y apellido</label> -->
-                            <input type="text" class="form-control datafield" id="nameandsurname" aria-describedby="name-surname" placeholder="Nombre y apellido">
-                            <!-- <small id="emailHelp" class="form-text text-muted">El nombre y apellido del remitente.</small> -->
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="street">Calle</label> -->
-                            <input type="text" class="form-control datafield" id="street" aria-describedby="street" placeholder="Calle">
-                            <!-- <small id="emailHelp" class="form-text text-muted">Calle a la cual debe ser enviado el item.</small> -->
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="zipcode">CP</label> -->
-                            <input type="text" class="form-control datafield" id="zipcode" aria-describedby="zipcode" placeholder="CP">
-                            <!-- <small id="emailHelp" class="form-text text-muted">Codigo Postal.</small> -->
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="localidad">Localidad</label> -->
-                            <input type="text" class="form-control datafield" id="localidad" aria-describedby="localidad" placeholder="Localidad">
-                            <!-- <small id="emailHelp" class="form-text text-muted">Localidad.</small> -->
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="localidad">Provincia</label> -->
-                            <input type="text" class="form-control datafield" id="province" aria-describedby="province" placeholder="Provincia">
-                            <!-- <small id="emailHelp" class="form-text text-muted">Provincia.</small> -->
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="localidad">Codigo de Producto</label> -->
-                            <input type="text" class="form-control datafield" id="product-code" aria-describedby="product-code" placeholder="Codigo de producto">
-                            <!-- <small id="emailHelp" class="form-text text-muted">Codigo de producto.</small> -->
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="localidad">Descripción</label> -->
-                            <input type="text" class="form-control datafield" id="description" aria-describedby="description" placeholder="Descripción">
-                            <!-- <small id="emailHelp" class="form-text text-muted">Descripción de producto.</small> -->
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="localidad">VD</label> -->
-                            <input type="text" class="form-control datafield" id="vd" aria-describedby="vd" placeholder="VD">
-                            <!-- <small id="emailHelp" class="form-text text-muted">VD.</small> -->
-                        </div>
-                        <div class="form-group">
-                                <!-- <label for="email">Email</label> -->
-                            <input type="text" class="form-control datafield" id="email" aria-describedby="email" placeholder="Email">
-                            <!-- <small id="emailHelp" class="form-text text-muted">Direccioón de</small> -->
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="observations">Observaciones</label> -->
-                            <textarea class="form-control datafield" id="observations" rows="3" placeholder="Observaciones"></textarea>
-                        </div>
-                        <div class="form-group">
-                                <!-- <label for="email">Cantidad</label> -->
-                            <input type="number" class="form-control datafield" id="quantity" aria-describedby="quantity" placeholder="Cantidad" min="0">
-                            <!-- <small id="emailHelp" class="form-text text-muted">Cantidad.</small> -->
-                        </div>
-                        <div class="form-group">
-                                <!-- <label for="email">Gestion a realizar</label> -->
-                            <input type="text" class="form-control datafield" id="action" aria-describedby="action" placeholder="Gestion a realizar">
-                            <!-- <small id="emailHelp" class="form-text text-muted">Gestion a realizar.</small> -->
-                        </div>
-                    </fieldset>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button id="" type="button" class="btn btn-primary" onclick="converter.addItem()">Agregar item</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-            </div>
-            </div>
-        </div>
-    </div>
-
     <h5>Crea el listado de tus productos a ingresar en nuestro deposito y envialo como archivo Excel automaticamente desde acá.</h5>
     <br>
     <div class="wrappers">
@@ -131,6 +43,7 @@
                     <span id="file-title"><span class="file-title-text"></span><code>.xlsx</code></span>
                 </div>
             </div>
+            <a class="back" href="/entries">Volver</a>
         </div> 
         <!-- End wrapper -->
         <!-- Add item form -->
@@ -142,7 +55,7 @@
                 <div class="form-1">
                     <div class="form-group">
                         <!-- <label for="numnerid">NRO ID</label> -->
-                        <input type="text" class="form-control datafield" id="numnerid" aria-describedby="id-number" placeholder="NRO ID">
+                        <input type="text" class="form-control datafield" id="numberid" aria-describedby="id-number" placeholder="NRO ID">
                         <!-- <small id="emailHelp" class="form-text text-muted">El numero de identificación de tu producto.</small> -->
                     </div>
                     <div class="form-group">
@@ -209,12 +122,33 @@
                     </div>
                 </div>
             </form>
+            <button id="" style="width: 100%; margin: 10px 0 0 0;" type="button" class="btn" onclick="converter.addItem()">Agregar item</button>
         </div>
     </div>
     <!-- End wrappers -->
-    <a class="back" href="/entries">Volver</a>
     <!-- TABLE -->
-    <div class="table-wrapper" style="overflow-x:auto;">
+    <div class="table-wrapper" style="overflow-x:auto; margin-top: 100px;">
+        <h2>Productos Agregados:</h2>
+        <table id="products-for-excel" class="table table-hover">
+            <tr class="table-default" style="visibility:hidden;">
+            <th>NRO_ID</th>
+            <th>Nombre y Apellido</th> 
+            <th>CALLE</th>
+            <th>CP</th>
+            <th>LOCALIDAD</th>
+            <th>PROVINCIA</th>
+            <th>CODIGO DE PRODUCTO</th>
+            <th>DESCRIPCION DEL PRODUCTO</th>
+            <th>VD</th>
+            <th>E-MAIL</th>
+            <th>OBSERVACION</th>
+            <th>CANTIDAD</th>
+            <th>GESTION A REALIZAR</th>
+            </tr>
+            <tr class="data">
+                <!-- Info append's here -->
+            </tr>
+        </table>
         <table id="products" class="table table-hover" style="visibility: hidden;">
             <thead>
                 <tr class="table-default">
@@ -248,26 +182,6 @@
                 <td id="observation"></td>
                 <td id="quantity"></td>
                 <td id="mgmt-to-be-carried-out"></td>
-            </tr>
-        </table>
-        <table id="products-for-excel" class="table table-hover">
-            <tr class="table-default" style="visibility:hidden;">
-            <th>NRO_ID</th>
-            <th>Nombre y Apellido</th> 
-            <th>CALLE</th>
-            <th>CP</th>
-            <th>LOCALIDAD</th>
-            <th>PROVINCIA</th>
-            <th>CODIGO DE PRODUCTO</th>
-            <th>DESCRIPCION DEL PRODUCTO</th>
-            <th>VD</th>
-            <th>E-MAIL</th>
-            <th>OBSERVACION</th>
-            <th>CANTIDAD</th>
-            <th>GESTION A REALIZAR</th>
-            </tr>
-            <tr class="data">
-                <!-- Info append's here -->
             </tr>
         </table>
     </div>
