--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="links">
-            <a href="/dashboard">
+            <a href="/welcome">
                 <img src="/images/svg/logo-with-label-white.svg" class="app-logo" alt="logo" />
             </a>
             <a id="inventory" class="navs" href="/dashboard">Inventario</a>
