--- a/app/views/stats.ejs
+++ b/app/views/stats.ejs
@@ -1,5 +1,28 @@
 <div id="stats" class="sections">
-    <h1>Proximamente</h1>
+    <h1>Estadísticas</h1>
+    <div class="stats-wrapper">
+        <div class="top-header green-background top-round-borders white-font-color">
+            <h2>ULTIMOS 30 DÍAS  |  ÚLTIMOS 15 DÍAS  |  ÚLTIMOS 7 DÍAS</h2>
+        </div>
+        <img src="/images/svg/stats/stats-img.svg" alt="stats image">
+        <div class="details">
+            <div class="products">
+                <div class="top-header green-background top-round-borders white-font-color">
+                    <h2>PRODUCTOS MAS VENDIDOS</h2>
+                </div>
+            </div>
+            <div class="locations">
+                <div class="top-header green-background top-round-borders white-font-color">
+                    <h2>ZONAS CON MAS ENVIOS</h2>
+                </div>
+            </div>
+            <div class="months">
+                <div class="top-header green-background top-round-borders white-font-color">
+                    <h2>MES DE MAYOR VENTAS</h2>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <script>
     // Show header when view is dashboard.
