--- a/app/views/stats.ejs
+++ b/app/views/stats.ejs
@@ -2,7 +2,7 @@
     <h1>Estadísticas</h1>
     <div class="stats-wrapper">
         <div class="top-header green-background top-round-borders white-font-color">
-            <h2>ULTIMOS 30 DÍAS  |  ÚLTIMOS 15 DÍAS  |  ÚLTIMOS 7 DÍAS</h2>
+            <h2>ULTIMOS 30 DÍAS</h2>
         </div>
         <img src="/images/svg/stats/stats-img.svg" alt="stats image">
         <div class="details">
@@ -10,6 +10,48 @@
                 <div class="top-header green-background top-round-borders white-font-color">
                     <h2>PRODUCTOS MAS VENDIDOS</h2>
                 </div>
+                <ul class="grey-background bottom-round-borders">
+                    <li class="item">
+                        <div class="left">
+                            <span>Gorras golf</span>
+                        </div>
+                        <div class="right">
+                            <span>729 u.</span>
+                        </div>
+                    </li>
+                    <li class="item different-background">
+                        <div class="left">
+                            <span>Botines</span>
+                        </div>
+                        <div class="right">
+                            <span>41 u.</span>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="left">
+                            <span>Camperones de lluvia</span>
+                        </div>
+                        <div class="right">
+                            <span>120 u.</span>
+                        </div>
+                    </li>
+                    <li class="item different-background">
+                        <div class="left">
+                            <span>Zapatillas</span>
+                        </div>
+                        <div class="right">
+                            <span>42 u.</span>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="left">
+                            <span>-</span>
+                        </div>
+                        <div class="right">
+                            <span></span>
+                        </div>
+                    </li>
+                </ul>
             </div>
             <div class="locations">
                 <div class="top-header green-background top-round-borders white-font-color">
