--- a/app/views/stats.ejs
+++ b/app/views/stats.ejs
@@ -16,7 +16,7 @@
                             <span>Gorras golf</span>
                         </div>
                         <div class="right">
-                            <span>729 u.</span>
+                            <span>729 unidades.</span>
                         </div>
                     </li>
                     <li class="item different-background">
@@ -24,7 +24,7 @@
                             <span>Botines</span>
                         </div>
                         <div class="right">
-                            <span>41 u.</span>
+                            <span>41 unidades.</span>
                         </div>
                     </li>
                     <li class="item">
@@ -32,7 +32,7 @@
                             <span>Camperones de lluvia</span>
                         </div>
                         <div class="right">
-                            <span>120 u.</span>
+                            <span>120 unidades.</span>
                         </div>
                     </li>
                     <li class="item different-background">
@@ -40,7 +40,7 @@
                             <span>Zapatillas</span>
                         </div>
                         <div class="right">
-                            <span>42 u.</span>
+                            <span>42 unidades.</span>
                         </div>
                     </li>
                     <li class="item">
@@ -57,11 +57,95 @@
                 <div class="top-header green-background top-round-borders white-font-color">
                     <h2>ZONAS CON MAS ENVIOS</h2>
                 </div>
+                <ul class="grey-background bottom-round-borders">
+                    <li class="item">
+                        <div class="left">
+                            <span>Palermo</span>
+                        </div>
+                        <div class="right">
+                            <span>139 unidades.</span>
+                        </div>
+                    </li>
+                    <li class="item different-background">
+                        <div class="left">
+                            <span>San Isidro</span>
+                        </div>
+                        <div class="right">
+                            <span>101 unidades.</span>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="left">
+                            <span>Recoleta</span>
+                        </div>
+                        <div class="right">
+                            <span>90 unidades.</span>
+                        </div>
+                    </li>
+                    <li class="item different-background">
+                        <div class="left">
+                            <span>Ezeiza</span>
+                        </div>
+                        <div class="right">
+                            <span>82 unidades.</span>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="left">
+                            <span>Lujan</span>
+                        </div>
+                        <div class="right">
+                            <span>55 unidades.</span>
+                        </div>
+                    </li>
+                </ul>
             </div>
             <div class="months">
                 <div class="top-header green-background top-round-borders white-font-color">
                     <h2>MES DE MAYOR VENTAS</h2>
                 </div>
+                <ul class="grey-background bottom-round-borders">
+                    <li class="item">
+                        <div class="left">
+                            <span>Julio</span>
+                        </div>
+                        <div class="right">
+                            <span>259 unidades.</span>
+                        </div>
+                    </li>
+                    <li class="item different-background">
+                        <div class="left">
+                            <span>Agosto</span>
+                        </div>
+                        <div class="right">
+                            <span>231 unidades.</span>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="left">
+                            <span>Septiembre</span>
+                        </div>
+                        <div class="right">
+                            <span>190 unidades.</span>
+                        </div>
+                    </li>
+                    <li class="item different-background">
+                        <div class="left">
+                            <span>Octubre</span>
+                        </div>
+                        <div class="right">
+                            <span>182 unidades.</span>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="left">
+                            <span>Noviembre</span>
+                        </div>
+                        <div class="right">
+                            <span>155 unidades.</span>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
