Fixed back link for product page

--- a/app/views/product.ejs
+++ b/app/views/product.ejs
@@ -16,7 +16,7 @@
             <img src="/images/product-image-not-available.png" alt="imagen de producto" width="180" height="180">
         </div>
     </div>
-    <a href="/dashboard" class="back">Volver</a>
+    <a href="javascript:history.back()" class="back">Volver</a>
 </div>
 <script>
     // Show header when view is dashboard.
