Change back button position for generate file view

--- a/app/views/generatefile.ejs
+++ b/app/views/generatefile.ejs
@@ -9,7 +9,7 @@
         <strong>Oh no!</strong> Algo salio mal, vuelve a intentarlo por favor.
     </div>
 
-    <h5>Crea el listado de tus productos a ingresar en nuestro deposito y envialo como archivo Excel automaticamente desde acá.</h5>
+    <h5>Crea el listado de tus productos a ingresar en nuestro deposito y envialo como archivo Excel automaticamente desde acá. <span style="margin-left: 20px;"><a class="back" href="/entries">Volver</a></span></h5>
     <br>
     <div class="wrappers">
         <div class="generate-wrapper">
@@ -43,7 +43,6 @@
                     <span id="file-title"><span class="file-title-text"></span><code>.xlsx</code></span>
                 </div>
             </div>
-            <a class="back" href="/entries">Volver</a>
         </div> 
         <!-- End wrapper -->
         <!-- Add item form -->
