--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -21,7 +21,7 @@
             <a id="inventory" class="navs" href="/dashboard">Inventario</a>
             <a id="orders" class="navs" href="/orders">Pedidos</a>
             <a id="entries" class="navs" href="/entries">Solicitudes</a>
-            <a id="entries" class="navs" href="/integrations">Integraciones</a>
+            <a id="integrations" class="navs" href="/integrations">Integraciones</a>
             <a id="stats" class="navs" href="/stats">Estadísticas</a>
         </div>
         <div class="user-module">
@@ -33,6 +33,7 @@
                 <a id="inventory" class="navs-mobile" href="/dashboard">Inventario</a>
                 <a id="orders" class="navs-mobile" href="/orders">Pedidos</a>
                 <a id="entries" class="navs-mobile" href="/entries">Solicitudes</a>
+                <a id="integrations" class="navs-mobile" href="/integrations">Integraciones</a>
                 <a id="stats" class="navs-mobile" href="/stats">Estadísticas</a>
                 <a id="logout" class="navs-mobile" href="/users/logout">Salir</a>
             </div>
